--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -26,20 +26,37 @@
 
     <div class="container-fluid m-0 p-0">
 
-        <div class="container-fluid bg-black">
-            <h1 class="finger-paint-regular">WHISPER</h1>
+
+        <h1 class="finger-paint-regular">WHISPER</h1>
+
+        <div class="container-fluid d-flex justify-content-around text-center py-5 ">
+
+            <div class="row row-cols-3">
+                <!--      мб обернуть каждый в div          -->
+
+                <p class="col">Анонимная чат-рулетка</p>
+                <p class="col">Присоединяйся сейчас!</p>
+                <p class="col">Пятница, Июнь 28, 2024</p>
+
+                <div class="col">
+                    <img src="images/keyboard.jpg" alt="Man whisper" width="420" class="rounded-4">
+                </div>
+                <div class="col">
+                    <img src="images/bw_whisper.jpg" alt="Man whisper" width="480" class="rounded-4">
+                </div>
+                <div class="col">
+                    <img src="images/phone_in_hand.jpg" alt="Man whisper" width="420" class="rounded-4">
+                </div>
+            </div>
+
         </div>
 
-
-        <div class="d-flex justify-content-around">
-            <p>Анонимная чат-рулетка</p>
-            <p>Присоединяйся сейчас!</p>
-            <p>Пятница, Июнь 28, 2024</p>
+        <div>
+            <button>
+                Типа кнопка вниз
+            </button>
         </div>
 
-        <div class="container pb-5 text-center">
-            <img src="images/bw_whisper.jpg" alt="Man whisper" width="500" class="rounded-4">
-        </div>
 
 
 
