--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -29,7 +29,7 @@
 
         <h1 class="finger-paint-regular">WHISPER</h1>
 
-        <div class="container-fluid d-flex justify-content-around text-center py-5 ">
+        <div class="container-fluid d-flex justify-content-around text-center py-4 ">
 
             <div class="row row-cols-3">
                 <!--      мб обернуть каждый в div          -->
@@ -51,21 +51,20 @@
 
         </div>
 
-        <div>
-            <button>
-                Типа кнопка вниз
-            </button>
+        <div class="container text-center py-2">
+            <input type="image" onclick="document.getElementById('main').scrollIntoView();" src="./images/arrow_down.png" alt="дальше" width="50" class="opacity-75"/>
         </div>
-
-
-
 
     </div>
 </header>
 
-<main>
-    <div class="container" style="height: 1000px">
-
+<main id="main">
+    <div class="container p-5 mx-auto" style="height: 1000px">
+        <p>Начните общаться прямо сейчас</p>
+        <h2>
+            Присоединяйся к революции!
+            Дайте волю своим мыслям и идеям. Будьте спонтанны и мгновенно общайтесь с единомышленниками по всему миру.
+        </h2>
     </div>
 </main>
 
