крч надо их подвинуть , я сделаю чуть позже , а так изображения встали вровень с текстом

--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -28,7 +28,7 @@
 
 
         <h1 class="finger-paint-regular">WHISPER</h1>
-
+        <!--d-flex justify-content-center align-items-start-->
         <div class="container-fluid d-flex justify-content-around text-center py-4 ">
 
             <div class="row row-cols-3">
@@ -58,15 +58,43 @@
     </div>
 </header>
 
-<main id="main">
-    <div class="container p-5 mx-auto" style="height: 1000px">
+<main id="main pb-4 ">
+    <div class="container p-5 mx-auto" >
         <p>Начните общаться прямо сейчас</p>
         <h2>
             Присоединяйся к революции!
             Дайте волю своим мыслям и идеям. Будьте спонтанны и мгновенно общайтесь с единомышленниками по всему миру.
         </h2>
     </div>
+    <div>
+        <div class=" container row row-cols-3 ">
+            <div class="col">
+            <img src="images/медведь.jpg"  class="bear " alt="" width="200px">
+                <p class="">fdsafdsf</p>
+            </div>
+            <div class="col">
+            <img src="images/медведь.jpg"  class="bear  " alt="" width="200px">
+                <p >sdfdsfsd</p>
+            </div>
+            <div class="col">
+            <img src="images/медведь.jpg" class="bear " alt="" width="200px">
+                <p >sdfsdfds</p>
+        </div>
+            <!--<p class="col">fdsafdsf</p>
+            <p class="col">sdfdsfsd</p>
+            <p class="col">sdfsdfds</p>--!>
+        </div>
+    </div>
+
 </main>
+
+<!--<footer id="footer">
+    <section class="container "></section>
+
+</footer>!-->
+
+
+
 
 </body>
 </html>
