Frontend-им потихоньку

--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -64,7 +64,7 @@
             <div class="w-25 mx-5 align-self-end">
                 <img src="images/bw_whisper.jpg" alt="Man whisper" class="rounded-5 w-100 ">
                 <p class="pt-3 text-green text-start">Полная анонимность</p>
-                <p class="text-start">Мы ценим вашу безопасность, поэтому все данные разговоров и чатов надёжно защищены</p>
+                <p class="text-start">Для регистрации аккаунта ненужно вводить личные данных, достаточно придумать логин и пароль</p>
             </div>
             <div class="w-25 align-self-end">
                 <img src="images/phone_in_hand.jpg" alt="Man whisper" class="rounded-5 w-100">
@@ -76,7 +76,7 @@
     </div>
 
     <div class="container py-5 text-center w-50">
-        <h2 class="text-yellow pt-5">
+        <h2 class="text-green pt-5">
             Начни общаться прямо сейчас!
         </h2>
         <p class="p-3 justify">
@@ -90,12 +90,13 @@
 </main>
 
 <footer id="footer">
-    <div class="container d-flex justify-content-around my-5 py-5">
-        <p>
-            © 2024 Whisper
-        </p>
-        <p>
-            Все права защищены
+    <div class="container d-flex justify-content-between mb-2 mt-5 py-5">
+        <p class="text-start">
+            © 2024 Whisper. Все права защищены
+            <br />
+            <a class="text-green" href="./FAQ">
+                FAQ
+            </a>
         </p>
         <p>
             Pet-проект
