Frontend-им потихоньку

--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -21,7 +21,7 @@
 <header class="header">
 
     <div class="container-fluid pt-3 d-flex justify-content-end">
-        <p class="me-3">Вход\Регистрация</p>
+        <a type="button" class="btn btn-outline-dark me-3 transit" href="./login">Вход\Регистрация</a>
     </div>
 
     <div class="container-fluid m-0 p-0">
@@ -59,7 +59,7 @@
                 </h2>
                 <img src="images/keyboard.jpg" alt="Man whisper" class="rounded-5 w-100">
                 <p class="pt-3 text-green text-start">Текст & Голос</p>
-                <p class="text-start">Мы ценим вашу безопасность, поэтому все данные разговоров и чатов надёжно защищены</p>
+                <p class="text-start">Вы можете общаться одним из двух способов: либо голосовым чатом, либо текстовым</p>
             </div>
             <div class="w-25 mx-5 align-self-end">
                 <img src="images/bw_whisper.jpg" alt="Man whisper" class="rounded-5 w-100 ">
