Frontend-им потихоньку

--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -9,8 +9,7 @@
     <link href="fonts/FingerPaint-Regular.ttf" rel="stylesheet">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/whisper.css" rel="stylesheet">
-    <link href="fonts/WOX-Striped_Triple_Demo.otf" rel="stylesheet">
+    <link href="css/WelcomePage.css" rel="stylesheet">
 
     <script src="js/bootstrap.bundle.js"></script>
 
@@ -57,17 +56,17 @@
                 <h2 class="text-yellow text-start py-5">
                     Почему мы?
                 </h2>
-                <img src="images/keyboard.jpg" alt="Man whisper" class="rounded-5 w-100">
+                <img src="images/type_chat.jpg" alt="Man whisper" class="rounded-5 w-100">
                 <p class="pt-3 text-green text-start">Текст & Голос</p>
                 <p class="text-start">Вы можете общаться одним из двух способов: либо голосовым чатом, либо текстовым</p>
             </div>
             <div class="w-25 mx-5 align-self-end">
-                <img src="images/bw_whisper.jpg" alt="Man whisper" class="rounded-5 w-100 ">
+                <img src="images/anon.png" alt="Man whisper" class="rounded-5 w-100 ">
                 <p class="pt-3 text-green text-start">Полная анонимность</p>
                 <p class="text-start">Для регистрации аккаунта ненужно вводить личные данных, достаточно придумать логин и пароль</p>
             </div>
             <div class="w-25 align-self-end">
-                <img src="images/phone_in_hand.jpg" alt="Man whisper" class="rounded-5 w-100">
+                <img src="images/security.jpg" alt="Man whisper" class="rounded-5 w-100">
                 <p class="pt-3 text-green text-start">Шифрование данных</p>
                 <p class="text-start">Мы ценим вашу безопасность, поэтому все данные разговоров и чатов надёжно защищены</p>
 
@@ -82,9 +81,9 @@
         <p class="p-3 justify">
             Пришло время выйти из-под имени пользователя. Давайте вести настоящие, содержательные разговоры. Нажмите ниже, чтобы начать общение.
         </p>
-        <button type="button" class="btn yellow">
+        <a type="button" class="btn yellow" href="./login">
             Начать общение
-        </button>
+        </a>
     </div>
 
 </main>
