--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -7,10 +7,12 @@
 
     <title>Swamp</title>
     <link rel="icon" type="image/png" href="images/favicon/frog-favicon.svg" sizes="32x32" />
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="bootstrap/js/bootstrap.bundle.js"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link href="css/general.css" rel="stylesheet">
     <link href="css/MainPage.css" rel="stylesheet">
+
 
 </head>
 
@@ -23,13 +25,68 @@
 
         <div class="left_slide mx-lg-5 mx-md-3 mx-sm-1"></div>
 
-        <div class="container text-center align-self-start my-5">
-            <h1 class="mb-5">Добро пожаловать в Болото!</h1>
-            <h2>
-                Этот проект выполнен для получения новых навыков в программировании и пр. и не преследует никаких коммерческих целей.
-                Swamp - это небольшая социальная сеть. Здесь вы сможете общаться с другими людьми и много другое.
-            </h2>
+        <div class="container-fluid text-center align-self-start my-5">
+
+            <div class="px-3">
+                <h1 class="mb-5">Добро пожаловать в Болото!</h1>
+                <h2>
+                    Этот проект выполнен для получения новых навыков в программировании и пр. и не преследует никаких коммерческих целей.
+                    Swamp - это небольшая социальная сеть. Здесь вы сможете общаться с другими людьми и много другое.
+                </h2>
+
+            </div>
+
+            <div class="container my-5">
+
+                <div class="row">
+                    <div class="col-8 col-md-6 offset-2 offset-md-3" id="login-form">
+
+                        <ul class="nav nav-pills justify-content-start" id="pills-tab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="home" aria-selected="true">Вход</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab" aria-controls="profile" aria-selected="false">Регистрация</button>
+                            </li>
+                        </ul>
+
+                        <div class="strip"></div>
+
+                        <div class="tab-content mt-4" id="myTabContent">
+                            <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+                                <form method="post" action="/login">
+
+                                    <div class="">
+                                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                    </div>
+                                    <div class="">
+                                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="exampleInputPassword1">
+                                    </div>
+                                    <div class=" form-check">
+                                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+
+                                </form>
+                            </div>
+                            <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
+                                <form method="post" action="/register">
+
+                                </form>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
+
+
 
     </div>
 
@@ -38,6 +95,12 @@
 <footer>
 </footer>
 
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<!-- Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+<script src="js/MainPage.js"></script>
 
 </body>
 </html>
