--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -75,7 +75,22 @@
 
                             <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
                                 <form method="post" action="/register">
+                                    <div class="mb-1">
+                                        <label for="exampleInputEmail13" class="form-label text-start d-flex">Почта / логин / номер телефона</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail13" aria-describedby="emailHelp">
+                                    </div>
+                                    <div class="mb-2">
+                                        <label for="exampleInputPassword12" class="form-label text-start d-flex">Пароль</label>
+                                        <input type="password" class="form-control" id="exampleInputPassword12">
+                                    </div>
+                                    <div class="mb-2">
+                                        <label for="exampleInputPassword11" class="form-label text-start d-flex"> Повторить Пароль</label>
+                                        <input type="password" class="form-control" id="exampleInputPassword11">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
 
+                                </form>
+                            </div>
                                 </form>
                             </div>
 
