крч надо их подвинуть , я сделаю чуть позже , а так изображения встали вровень с текстом павпава

--- a/src/main/resources/ru/app/public/index.html
+++ b/src/main/resources/ru/app/public/index.html
@@ -84,7 +84,7 @@
                                         <input type="password" class="form-control" id="exampleInputPassword12">
                                     </div>
                                     <div class="mb-2">
-                                        <label for="exampleInputPassword11" class="form-label text-start d-flex"> Повторить Пароль</label>
+                                        <label for="exampleInputPassword11" class="form-label text-start d-flex"> Повторите Пароль</label>
                                         <input type="password" class="form-control" id="exampleInputPassword11">
                                     </div>
                                     <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
