--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -15,39 +15,82 @@
 
 </head>
 <body>
-    <header class="main_header">
 
-        <div class="navigation">
 
-                <div class="nav_panel">
-                    <div class="prev"><p class="p1">Здесь типа будет ссылка на что-то или фотка какая-нибудь</p></div>
-                    <div class="profile"><p class="p2">а здесь можно зайти в профиль</p></div>
-                </div>
+<header class="header">
+
+    <div class="content">
+
+        <div class="main">
+
+            <nav class="navbar navbar-dark bg-dark"> </nav>
+
         </div>
 
+    <section class="section">
 
+        <div class="row h-100">
 
-    </header>
-    <div id="main">
-    <div class="row">
-         <div class="col-2">
+            <div class="col-12  ">
 
-                <div class="main_content">
-                    <p>Сообщения</p>
-                    <p>Друзья</p>
-                    <p>Моя страница</p>
+                <div class="  d-flex h-100 ">
+
+                        <div class="col-2 " >
+                            <div class="look">
+
+                            </div>
+                            <div class="members">
+
+                            </div>
+                        </div>
+
+                        <div class="col-8 middle_path">
+                            <div class="img">
+
+                            </div>
+
+                            <div class="some_text">
+
+                            </div>
+                        </div>
+
+                        <div class="col-2">
+                            <div class="reg_input">
+
+                            </div>
+                            <div class="statistic">
+
+                            </div>
+                        </div>
+
                 </div>
-         </div>
+            </div>
+
+        </div>
+
+        <!--<section class="main_section">-->
+        <!--    <div class="row ">-->
+        <!--        <div class="col-12 main__content">-->
+        <!--            <div class="con">-->
+        <!--                <div class="col-2">-->
+        <!--                    <p>ffds</p>-->
+        <!--                </div>-->
+        <!--                <div class="col-10">-->
+        <!--                <p>fsdfsdds</p>-->
+        <!--                </div>-->
+        <!--            </div>-->
+
+        <!--        </div>-->
+
+
+        <!--    </div>-->
+        <!--</section>-->
+
+    </section>
+
     </div>
-        <div class="row-2">
-                <div class="col-12">
-                    <div class="main_msg">
-                            <p>Здесь будет писанина</p>
-                    </div>
-                </div>
-                </div>
 
-    </div>
+</header>
 
 
 
@@ -55,3 +98,11 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
