--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Swamp</title>
-    <link rel="icon" type="image/png" href="images/favicon/frog-favicon.svg" sizes="32x32" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="images/favicon/frog-favicon.svg" sizes="32x32"/>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link href="css/general.css" rel="stylesheet">
-    <link href="css/MainPage.css" rel="stylesheet">
     <link href="css/Main.css" rel="stylesheet">
-    <link href="css/delete_later.css" rel="stylesheet">
 
 </head>
 <body>
@@ -19,82 +19,85 @@
 
 <header class="header">
 
-    <div class="content">
+    <div>
 
-        <div class="main">
-
-            <nav class="navbar navbar-dark bg-dark"> </nav>
-
-        </div>
-
-    <section class="section">
-
-        <div class="row h-100">
-
-            <div class="col-12  ">
-
-                <div class="  d-flex h-100 ">
-
-                        <div class="col-2 " >
-                            <div class="look">
-
-                            </div>
-                            <div class="members">
-
-                            </div>
-                        </div>
-
-                        <div class="col-8 middle_path">
-                            <div class="img">
-
-                            </div>
-
-                            <div class="some_text">
-
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <div class="reg_input">
-
-                            </div>
-                            <div class="statistic">
-
-                            </div>
-                        </div>
-
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </div>
             </div>
-
-        </div>
-
-        <!--<section class="main_section">-->
-        <!--    <div class="row ">-->
-        <!--        <div class="col-12 main__content">-->
-        <!--            <div class="con">-->
-        <!--                <div class="col-2">-->
-        <!--                    <p>ffds</p>-->
-        <!--                </div>-->
-        <!--                <div class="col-10">-->
-        <!--                <p>fsdfsdds</p>-->
-        <!--                </div>-->
-        <!--            </div>-->
-
-        <!--        </div>-->
-
-
-        <!--    </div>-->
-        <!--</section>-->
-
-    </section>
+        </nav>
 
     </div>
 
 </header>
 
 
+<main class="container-fluid p-5">
+    <div class="row">
 
+        <div class="col-12">
 
+            <div class="d-flex  ">
+
+                <div class="col-2 ">
+                    <div class="members">
+
+                    </div>
+                </div>
+
+                <div class="col-8 middle_path">
+                    <div class="img">
+
+                    </div>
+
+                    <div class="some_text">
+
+                    </div>
+                </div>
+
+                <div class="col-2">
+                    <div class="statistic">
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+</main>
 
 </body>
 </html>
