--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -10,11 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link href="css/general.css" rel="stylesheet">
     <link href="css/Main.css" rel="stylesheet">
 
-</head>
-<body>
+<body class="d-flex flex-column">
 
 
 <header class="header">
@@ -22,37 +20,18 @@
     <div>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <div class="container-fluid px-5">
+                <a class="navbar-brand">Swamp</a>
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="nav-link active" aria-current="page" href="#">Домашняя страница</a>
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" placeholder="Теги" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Поиск</button>
                     </form>
                 </div>
             </div>
@@ -63,44 +42,67 @@
 </header>
 
 
-<main class="container-fluid p-5">
-    <div class="row">
+<main class="container-fluid flex-fill">
+    <div class="row h-100 px-5 py-3">
 
-        <div class="col-12">
+        <div class="col-2 bgr">
+            <div class="py-2">
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+            </div>
 
-            <div class="d-flex  ">
+        </div>
 
-                <div class="col-2 ">
-                    <div class="members">
 
-                    </div>
-                </div>
+        <div class="col-8 px-3 pb-3">
 
-                <div class="col-8 middle_path">
-                    <div class="img">
-
-                    </div>
-
-                    <div class="some_text">
-
-                    </div>
-                </div>
-
-                <div class="col-2">
-                    <div class="statistic">
-
-                    </div>
-                </div>
+            <div class="bgr h-60 mb-3">
 
             </div>
+
+            <div class="bgr h-40">
+
+            </div>
+
         </div>
+
+        <div class="col-2 bgr">
+
+            <div class="py-2">
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+                <p>123</p>
+
+            </div>
+
+
+        </div>
+
 
     </div>
 
 </main>
 
+
 </body>
 </html>
+
+
+
+
+
+
+
+
 
 
 
