--- a/src/main/resources/ru/app/public/Main.html
+++ b/src/main/resources/ru/app/public/Main.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="images/favicon/frog-favicon.svg" sizes="32x32"/>
 
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/general.css" rel="stylesheet">
     <link href="css/Main.css" rel="stylesheet">
 
 </head>
@@ -16,45 +17,52 @@
 
 <header class="header">
 
-    <div>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-            <div class="container-fluid mx-5 p-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-                <a class="navbar-brand" href="#">
-                    <img src="images/favicon/frog-favicon.svg" alt="frog" width="30" height="24" class="d-inline-block align-text-bottom">
-                    Swamp
-                </a>
+        <div class="container-fluid mx-5 p-0 ">
 
-                <div class="navbar-nav navbar_nav_center">
-                    <a class="nav-link p-0 active">
-                        Главная
-                    </a>
-                    <a class="nav-link p-0 mx-3" href="./Posts.html">
-                        Посты
-                    </a>
-                    <a class="nav-link p-0" href="#">
-                        Чаты
-                    </a>
-                </div>
+            <a class="navbar-brand" href="#">
+                <img src="images/favicon/frog-favicon.svg" alt="frog" width="30" height="24" class="d-inline-block align-text-bottom">
+                Swamp
+            </a>
 
-                <!-- Правая часть navbar -->
-
-                <div class="d-flex align-items-center ">
-
-                    <a class="nav-link p-0 ms-1" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                        </svg>
-                    </a>
-                </div>
+            <div class="navbar_nav_center">
+                <ul class="navbar-nav  general_navbar">
+                    <li class="nav-item">
+                        <a class="nav-link green on_curr_page" >Главная</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link green" href="./Posts.html">Посты</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link green">Чаты</a>
+                    </li>
+                </ul>
             </div>
 
-        </nav>
 
+            <div class=" align-items-center ">
+
+                <a class="nav-link p-0 ms-1" href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+    </nav>
+
+    <div class="justify-content-around w-100 additional_navbar pb-1" hidden="hidden">
+        <a class="green on_curr_page">Главная</a>
+        <a class="green mx-3" href="./Posts.html">Посты</a>
+        <a class="green">Чаты</a>
     </div>
+
+
 
 </header>
 
@@ -88,7 +96,7 @@
                 </div>
 
                 <div class="background_rounded h-35" id="scroll2">
-                    <div class="last_activity_div rounded-top-4 py-2 ps-4">
+                    <div class="site_info_div rounded-top-4 py-2 ps-4">
                         <h6 class="m-0">
                             Информация о сайте
                         </h6>
